# w-ssh

./: CLAUDE.md  README.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  lib.rs  models.rs  ssh.rs
src/components/: HostCard.vue  SessionForm.vue  SessionSidebar.vue  TerminalPanel.vue  VaultsView.vue
src/stores/: sessions.ts  terminals.ts
src/types/: index.ts
