[package]
name = "w-ssh"
version = "0.1.0"
description = "A lightweight SSH session manager"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# SSH
russh = "0.46"
russh-keys = "0.46"
ssh-key = "0.6"

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }

# 错误处理
anyhow = "1"
thiserror = "2"

# UUID
uuid = { version = "1", features = ["v4"] }

# 并发安全的 HashMap（管理多个 SSH session）
dashmap = "6"

# async trait 支持（russh 依赖）
async-trait = "0.1"

